Opened 16 years ago
Closed 15 years ago
#4336 closed bug (fixed)
[Backgrounds] doesn't appear in deskbar when started as tracker add-on
Reported by: | diver | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Backgrounds | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Right click desktop -> Add-Ons -> Background(s?), I would expect it to appear in Deskbar like others add-ons (excluding OpenTerminal) but it's not.
Tested with hrev32651 in VirtualBox.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev32844, based on ideas by Fredrik Modèen, Ryan Leavengood and myself.