Solve #4336 as suggested by Fredrik Modèen, using shared private code as suggested by Ryan Leavengood. Removed ProcessRefs code path.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@32844 a95241bf-73f2-0310-859d-f6bbb57e9c96